--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.95.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
+    "pigeon-maps": "^0.22.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
